[project]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = [
    {name = "fakeidshadow",email = "mmghasemi13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (==2.0.45)",
    "alembic (==1.17.2)",
    "pydantic (==2.12.5)",
    "pytz (==2025.2)",
    "fastapi (==0.124.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
